--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
         testImplementation "com.tngtech.archunit:archunit-junit5:$archUnitVersion"
         implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
+        implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
 
         testImplementation "org.assertj:assertj-core:$assertJVersion"
         implementation "org.postgresql:postgresql:$postgresVersion"
