--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ subprojects {
         implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
+        implementation "io.springfox:springfox-boot-starter:$springFoxVersion"
+
 
         testImplementation "org.assertj:assertj-core:$assertJVersion"
         implementation "org.postgresql:postgresql:$postgresVersion"
