--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ springVersion=5.3.18
 jupiterVersion=5.8.1
 archUnitVersion=1.0.0
 springBootVersion=2.7.7
+springFoxVersion=3.0.0
 mockitoVersion=5.1.1
 postgresVersion=42.5.2
 assertJVersion=3.23.1
