--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ subprojects {
         implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
         implementation "org.springframework.boot:spring-boot-starter-validation:$springBootVersion"
-        implementation "io.springfox:springfox-boot-starter:$springFoxVersion"
+        implementation "org.springframework.boot:spring-boot-starter-hateoas:$springBootVersion"
+
+        implementation "io.springfox:springfox-swagger2:$springFoxVersion"
 
 
         testImplementation "org.assertj:assertj-core:$assertJVersion"
