--- a/module-main/src/main/resources/application.yaml
+++ b/module-main/src/main/resources/application.yaml
@@ -8,3 +8,5 @@ spring:
     url: jdbc:postgresql://localhost:5432/task4
     username: postgres
     password: postgres
+  mvc:
+    throw-exception-if-no-handler-found: true
